[package]
name = "lighter-rs"
version = "0.1.1"
edition = "2021"
authors = ["Lighter Contributors"]
description = "Rust SDK for Lighter Protocol - A comprehensive trading library for blockchain"
license = "MIT"
repository = "https://github.com/0xvasanth/lighter-rs"
keywords = ["blockchain", "trading", "lighter", "crypto", "defi"]
categories = ["cryptography", "api-bindings"]

[features]
default = ["rustls-tls"]
native-tls = ["reqwest/native-tls", "tokio-tungstenite/native-tls"]
prefer-client-id = []
rustls-tls = [
  "reqwest/rustls-tls",
  "tokio-tungstenite/rustls-tls-webpki-roots",
]

[dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP Client
reqwest = { version = "0.12", features = ["json"], default-features = false }
tokio = { version = "1.0", features = ["full"] }

# WebSocket Client
tokio-tungstenite = { version = "0.21" }
futures-util = "0.3"

# Cryptography
hex = "0.4"
sha2 = "0.10"
base64 = "0.22"
# Poseidon cryptography for Lighter Protocol
goldilocks-crypto = "0.1.1"
poseidon-hash = "0.1.3"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Time handling
chrono = "0.4"

# Numeric types
num-bigint = "0.4"
num-traits = "0.2"
dotenv = "0.15"

[dev-dependencies]
tokio-test = "0.4"
mockito = "1.0"
dotenv = "0.15"

[lib]
name = "lighter_rs"
path = "src/lib.rs"
